--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <script src="http://localhost:8097"></script>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link href="EB_logo.png" rel="icon" type="image/png" />
     <title></title>
   </head>
   <body>
